@@ -1,0 +1,121 @@
+# -*- coding: utf-8 -*-
+from south.utils import datetime_utils as datetime
+from south.db import db
+from south.v2 import SchemaMigration
+from django.db import models
+
+
+class Migration(SchemaMigration):
+
+    def forwards(self, orm):
+        # Adding model 'Category'
+        db.create_table(u'sitecats_category', (
+            (u'id', self.gf('django.db.models.fields.AutoField')(primary_key=True)),
+            ('title', self.gf('django.db.models.fields.CharField')(max_length=250)),
+            ('alias', self.gf('sitecats.models.CharFieldNullable')(max_length=80, unique=True, null=True, blank=True)),
+            ('is_locked', self.gf('django.db.models.fields.BooleanField')(default=False)),
+            ('parent', self.gf('django.db.models.fields.related.ForeignKey')(blank=True, related_name='category_parents', null=True, to=orm['sitecats.Category'])),
+            ('note', self.gf('django.db.models.fields.TextField')(blank=True)),
+            ('status', self.gf('django.db.models.fields.IntegerField')(db_index=True, null=True, blank=True)),
+            ('slug', self.gf('sitecats.models.CharFieldNullable')(max_length=250, unique=True, null=True, blank=True)),
+            ('creator', self.gf('django.db.models.fields.related.ForeignKey')(related_name='category_creators', to=orm['auth.User'])),
+            ('time_created', self.gf('django.db.models.fields.DateTimeField')(auto_now_add=True, blank=True)),
+            ('time_modified', self.gf('django.db.models.fields.DateTimeField')(auto_now=True, blank=True)),
+            ('sort_order', self.gf('django.db.models.fields.PositiveIntegerField')(default=0, db_index=True)),
+        ))
+        db.send_create_signal(u'sitecats', ['Category'])
+
+        # Adding unique constraint on 'Category', fields ['title', 'parent']
+        db.create_unique(u'sitecats_category', ['title', 'parent_id'])
+
+        # Adding model 'Tie'
+        db.create_table(u'sitecats_tie', (
+            (u'id', self.gf('django.db.models.fields.AutoField')(primary_key=True)),
+            ('category', self.gf('django.db.models.fields.related.ForeignKey')(related_name='tie_categories', to=orm['sitecats.Category'])),
+            ('note', self.gf('django.db.models.fields.TextField')(blank=True)),
+            ('status', self.gf('django.db.models.fields.IntegerField')(db_index=True, null=True, blank=True)),
+            ('creator', self.gf('django.db.models.fields.related.ForeignKey')(related_name='tie_creators', to=orm['auth.User'])),
+            ('time_created', self.gf('django.db.models.fields.DateTimeField')(auto_now_add=True, blank=True)),
+            ('object_id', self.gf('django.db.models.fields.PositiveIntegerField')(db_index=True)),
+            ('content_type', self.gf('django.db.models.fields.related.ForeignKey')(related_name=u'sitecats_tie_tags', to=orm['contenttypes.ContentType'])),
+        ))
+        db.send_create_signal(u'sitecats', ['Tie'])
+
+
+    def backwards(self, orm):
+        # Removing unique constraint on 'Category', fields ['title', 'parent']
+        db.delete_unique(u'sitecats_category', ['title', 'parent_id'])
+
+        # Deleting model 'Category'
+        db.delete_table(u'sitecats_category')
+
+        # Deleting model 'Tie'
+        db.delete_table(u'sitecats_tie')
+
+
+    models = {
+        u'auth.group': {
+            'Meta': {'object_name': 'Group'},
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'unique': 'True', 'max_length': '80'}),
+            'permissions': ('django.db.models.fields.related.ManyToManyField', [], {'to': u"orm['auth.Permission']", 'symmetrical': 'False', 'blank': 'True'})
+        },
+        u'auth.permission': {
+            'Meta': {'ordering': "(u'content_type__app_label', u'content_type__model', u'codename')", 'unique_together': "((u'content_type', u'codename'),)", 'object_name': 'Permission'},
+            'codename': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            'content_type': ('django.db.models.fields.related.ForeignKey', [], {'to': u"orm['contenttypes.ContentType']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '50'})
+        },
+        u'auth.user': {
+            'Meta': {'object_name': 'User'},
+            'date_joined': ('django.db.models.fields.DateTimeField', [], {'default': 'datetime.datetime.now'}),
+            'email': ('django.db.models.fields.EmailField', [], {'max_length': '75', 'blank': 'True'}),
+            'first_name': ('django.db.models.fields.CharField', [], {'max_length': '30', 'blank': 'True'}),
+            'groups': ('django.db.models.fields.related.ManyToManyField', [], {'symmetrical': 'False', 'related_name': "u'user_set'", 'blank': 'True', 'to': u"orm['auth.Group']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'is_active': ('django.db.models.fields.BooleanField', [], {'default': 'True'}),
+            'is_staff': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'is_superuser': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'last_login': ('django.db.models.fields.DateTimeField', [], {'default': 'datetime.datetime.now'}),
+            'last_name': ('django.db.models.fields.CharField', [], {'max_length': '30', 'blank': 'True'}),
+            'password': ('django.db.models.fields.CharField', [], {'max_length': '128'}),
+            'user_permissions': ('django.db.models.fields.related.ManyToManyField', [], {'symmetrical': 'False', 'related_name': "u'user_set'", 'blank': 'True', 'to': u"orm['auth.Permission']"}),
+            'username': ('django.db.models.fields.CharField', [], {'unique': 'True', 'max_length': '30'})
+        },
+        u'contenttypes.contenttype': {
+            'Meta': {'ordering': "('name',)", 'unique_together': "(('app_label', 'model'),)", 'object_name': 'ContentType', 'db_table': "'django_content_type'"},
+            'app_label': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'model': ('django.db.models.fields.CharField', [], {'max_length': '100'}),
+            'name': ('django.db.models.fields.CharField', [], {'max_length': '100'})
+        },
+        u'sitecats.category': {
+            'Meta': {'unique_together': "(('title', 'parent'),)", 'object_name': 'Category'},
+            'alias': ('sitecats.models.CharFieldNullable', [], {'max_length': '80', 'unique': 'True', 'null': 'True', 'blank': 'True'}),
+            'creator': ('django.db.models.fields.related.ForeignKey', [], {'related_name': "'category_creators'", 'to': u"orm['auth.User']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'is_locked': ('django.db.models.fields.BooleanField', [], {'default': 'False'}),
+            'note': ('django.db.models.fields.TextField', [], {'blank': 'True'}),
+            'parent': ('django.db.models.fields.related.ForeignKey', [], {'blank': 'True', 'related_name': "'category_parents'", 'null': 'True', 'to': u"orm['sitecats.Category']"}),
+            'slug': ('sitecats.models.CharFieldNullable', [], {'max_length': '250', 'unique': 'True', 'null': 'True', 'blank': 'True'}),
+            'sort_order': ('django.db.models.fields.PositiveIntegerField', [], {'default': '0', 'db_index': 'True'}),
+            'status': ('django.db.models.fields.IntegerField', [], {'db_index': 'True', 'null': 'True', 'blank': 'True'}),
+            'time_created': ('django.db.models.fields.DateTimeField', [], {'auto_now_add': 'True', 'blank': 'True'}),
+            'time_modified': ('django.db.models.fields.DateTimeField', [], {'auto_now': 'True', 'blank': 'True'}),
+            'title': ('django.db.models.fields.CharField', [], {'max_length': '250'})
+        },
+        u'sitecats.tie': {
+            'Meta': {'object_name': 'Tie'},
+            'category': ('django.db.models.fields.related.ForeignKey', [], {'related_name': "'tie_categories'", 'to': u"orm['sitecats.Category']"}),
+            'content_type': ('django.db.models.fields.related.ForeignKey', [], {'related_name': "u'sitecats_tie_tags'", 'to': u"orm['contenttypes.ContentType']"}),
+            'creator': ('django.db.models.fields.related.ForeignKey', [], {'related_name': "'tie_creators'", 'to': u"orm['auth.User']"}),
+            u'id': ('django.db.models.fields.AutoField', [], {'primary_key': 'True'}),
+            'note': ('django.db.models.fields.TextField', [], {'blank': 'True'}),
+            'object_id': ('django.db.models.fields.PositiveIntegerField', [], {'db_index': 'True'}),
+            'status': ('django.db.models.fields.IntegerField', [], {'db_index': 'True', 'null': 'True', 'blank': 'True'}),
+            'time_created': ('django.db.models.fields.DateTimeField', [], {'auto_now_add': 'True', 'blank': 'True'})
+        }
+    }
+
+    complete_apps = ['sitecats']
